# GameJamProject

./: Cargo.toml  build.rs
lib/: colours.rs  image_object.rs  lib.rs
lib/object_map/: mod.rs
src/: camera.rs  character.rs  main.rs  map.rs  settings.rs  weapon.rs
src/pages/: game_play.rs  loading_screen.rs  main_menu.rs  mod.rs
