[package]
name = "GameJamProject"
version = "0.1.0"
authors = ["Clone <hisoskar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "lib/lib.rs"

[dependencies.cat_engine]
git = "https://github.com/Clomance/CatEngine"
branch = "pre-release"
features = ["audio","colour_filter"]